--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ cw721-base-017  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.17.0"
 cw721-base-018  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.18.0", package = "cw721-base" } # needed for testing legacy migration
 cw-multi-test   = "^0.20"
 cw-ownable      = { git = "https://github.com/public-awesome/cw-plus-plus.git", branch = "main"} # TODO: switch to official https://github.com/larry0x/cw-plus-plus once merged
+cw-paginate-storage  = "^2.3"
 cw-storage-plus = "^1.1"
 cw-utils        = "^1.0"
 schemars        = "^0.8"
